fixing lists spacing

--- a/css/style.css
+++ b/css/style.css
@@ -115,20 +115,31 @@ li {
 
 ul,
 ol {
+	margin-left: 0.8rem;
+}
+
+ul,
+ol {
 	list-style-position: outside;
 	padding-left: 1.6rem;
-	margin-left: 1.8rem;
 	display: grid;
 	gap: 0.8rem;
 }
 
+ul {
+	padding-left: 1.6rem;
+}
+
 li::marker {
 	color: var(--brown-800);
+}
+
+.instructions li::marker {
 	font-weight: 700;
 }
 
 li {
-	padding-left: 2.4rem;
+	padding-left: 1.6rem;
 }
 
 .title,
